<resources>
    <string name="info_title">Info</string>
    <string name="import_film">Import film (Exp.)</string>
    <string name="info_backup_success">File was imported successfully!</string>
    <string name="info_backup_failed">File could not be imported!</string>
    <string name="proceed2">Proceed</string>
    <string name="abort">Abort</string>
    <string name="warning">Warning</string>
    <string name="warning_restore">If you proceed, the current set will be overwritten. All data will be replaced.</string>
    <string name="import_equipment">Import set from file (Exp.)</string>
    <string name="import_data">Import data</string>
    <string name="export_equipment">Backup set to file</string>
    <string name="app_name">Photographer\'s</string>
    <string name="question_delete">Do you really want to delete the entry?</string>
    <string name="empty_title">Please enter a title for your film</string>
 	<string name="reset_tutorial">Reset tutorial</string>
    <string name="add">Add</string>
    <string name="title_taken">Film title already assigned... Please choose another title</string>
	<string name="ok">OK</string>
	<string name="yes">Yes</string>
	<string name="deleted">Entry deleted</string>
	<string name="entry_saved">Entry created</string>
	<string name="no">No</string>
	<string name="load">Load</string>
	<string name="start_film">Start film</string>
	<string name="delete_film">Delete film</string>
	<string name="continue_film">Continue film</string>
	<string name="edit_film">Edit film</string>
	<string name="firststart">Prepare first start...</string>
	<string name="export">Prepare data for export...</string>
	<string name="save_set">Save equipment set...</string>
	<string name="reset">Equipment set is reset to default values...</string>
	<string name="reset_warning">Do you really want to reset the active equipment set? All changes you have made will be lost.</string>
	<string name="set_saved">The equipment set has been successfully created and can now be edited!</string>
	<string name="create_new_film">Create new film</string>
	<string name="new_film">New film</string>
	<string name="film_selection">Film selection</string>
	<string name="proceed">Next</string>
	<string name="pictures">Pictures</string>
	<string name="delete_entry">Delete entry</string>
	<string name="make_default">As default value</string>
	<string name="delete_picture">Delete picture</string>
	<string name="edit_picture">Edit picture</string>
	<string name="default_saved">Default value saved</string>
	<string name="camera_model">Camera model</string>
	<string name="camera_models">Camera models</string>
	<string name="date">Date</string>
	<string name="film_note">Film brand name</string>
	<string name="film_note_short">Brand</string>
	<string name="film_format">Film format</string>
	<string name="film_formats">Film formats</string>
	<string name="film_speed">Film speed</string>
	<string name="film_type">Film type</string>
	<string name="processing">Special processing</string>
	<string name="general">General</string>
	<string name="camera">Camera</string>
	<string name="geotag">Geotag (experimental)</string>
	<string name="timestamp">Time stamp</string>
	<string name="lens">Lens</string>
	<string name="aperture">Aperture value</string>
	<string name="exposure">Exposure time</string>
	<string name="focus">Focus</string>
	<string name="filter">Filter</string>
	<string name="filter_vf">Filter compensation</string>
	<string name="macro">Macro</string>
	<string name="measurement">Metering mode</string>
	<string name="exposure_correction">Exposure compensation</string>
	<string name="macro_vf">Macro compensation</string>
	<string name="flash">Flash</string>
	<string name="flash_correction">Flash compensation</string>
	<string name="misc">Other</string>
	<string name="note">Note</string>
	<string name="camera_note">Camera note</string>
	<string name="film">Film</string>
	<string name="no_selection">No selection</string>
	<string name="title">Title</string>
	<string name="auto_title">Automatic title</string>
	<string name="on">On</string>
	<string name="off">Off</string>
	<string name="preview_pic">Thumbnail</string>
	<string name="cancel">Cancel</string>
	<string name="input_error">Faulty entry</string>
	<string name="click">Click</string>
	<string name="save">Save</string>
	<string name="save_changes">Save</string>
	<string name="cam_error">Camera fault, please try again!</string>
	<string name="new_picture">New picture</string>
	<string name="gps_off">GPS is deactivated! Activate GPS now in order to geotag your pictures!</string>
	<string name="picture">Picture</string>
	<string name="take_picture">Record picture</string>
	<string name="picture_taken">Picture made!</string>
	<string name="minus_one_minute">-1 minute</string>
	<string name="factor">Compensation factor (*)</string>
	<string name="aperture_adjusting">Added f-stop (+)</string>
	<string name="one_one">1/1</string>
	<string name="one_two">1/2</string>
	<string name="one_three">1/3</string>
	<string name="set_default">Standard</string>
	<string name="set_two">Set Two</string>
	<string name="set_three">Set Three</string>
	<string name="set_four">Set Four</string>
	<string name="set_loaded">Equipment set has been changed.</string>
	<string name="set_not_saved">The loaded equipment set cannot be overwritten.</string>
	<string name="empty_name_not_allowed">Empty name is not allowed.</string>
	<string name="choose_lens">Choose the lenses for the camera.</string>
	<string name="empty_or_existing_entry">The text box is empty or the object already exists!</string>
	<string-array name="strings_tutorial_1">
	    <item>Welcome to Photographer\'s Notebook!</item>
        <item>We would like to introduce you to the most important features of this app.</item>
        <item>By tapping the Menu button, you can find the settings for this app and enter your photo equipment.</item>
    	<item>When you\'re done adjusting the settings, you start your first film by tapping the \'+\' button in the action bar.</item>
   		<item>You can retrieve the film on this page again later and continue it, if required.</item>
	</string-array>
	<string-array name="strings_tutorial_2">
        <item>You can create a new film here. Set an appropriate title or let the app create a title automatically.</item>
        <item>You can select the values predefined in the settings in the choice boxes.</item>
    	<item>The settings available here can be changed by touching the Menu button as well.</item>
   		<item>When you have made your selection, please tap &quot;Start film&quot;. </item>
    </string-array>
    <string-array name="strings_tutorial_3">
        <item>Here you can personalise your settings and enter your photo equipment.</item>
        <item>The presets chosen here will be available in the choice boxes for film and picture meta data.</item>
        <item>You can add new entries or edit existing contributions after long-pressing the item.</item>
        <item>In the Menu, you can choose from different equipment sets and configure them according to your equipment used.</item>
        <item>Some data are already available and pre-selected. All you have to do is add a camera and allocate lenses.</item>
        <item>All changes are saved automatically in the current equipment set.</item>
    </string-array>
    <string-array name="pic_slide_contents">
        <item>Options I/II</item>
        <item>Options II/II</item>
        <item>Notes</item>
    </string-array>
    <string-array name="settings_slide_contents">
        <item>General</item>
		<item>Camera model</item>
		<item>Focus</item>
		<item>Aperture</item>
		<item>Exposure time</item>
		<item>Metering mode</item>
		<item>Exposure +/-</item>
		<item>Macro</item>
		<item>Macro compensation</item>
		<item>Filter</item>
		<item>Filter compensation</item>
		<item>Film formats</item>
		<item>Film speed</item>
		<item>Flash</item>
		<item>Flash compensation</item>
		<item>Special processing</item>
	</string-array>
	<string name="create_new_set">Prepare new set</string>
	<string name="load_existing_set">Choose other set</string>
	<string name="restore_default_settings">Reset current set</string>
	<string name="settings">Settings</string>
	<string name="back_to_start">Back to Film selection</string>
	<string name="about_this_app">About this app</string>
	<string name="info">&lt;p>Photographer\'s Notebook was developed within a student project  
	    of the Chair of Information Systems and New Media at the University of Siegen. The current version is still 
	    a beta version and is maintained and developed further only at irregular intervals.&lt;/p>
	    &lt;p>&lt;a href="https://bitbucket.org/sdraxler/photographers-notebook">https://bitbucket.org/sdraxler/photographers-notebook&lt;/a>&lt;/p>
	    &lt;p>Copyright (C) 2012 Nico Castelli, Christopher Maiworm &lt;br>&lt;/br>
	    Copyright (C) 2012 Sebastian Draxler, Alexander Boden, Christian Wöhrl (Committers)&lt;br>&lt;/br>
	    Licensed under Apache 2.0&lt;/p></string>
 	<string name="experimental">Adding geotags is still in an experimental stage.</string>
 	<string name="restart_required">Some of the changes will become active only after restarting the app.</string>
 	<string name="correction_type">Exposure compensation</string>
 	<string name="aperture_type">F-stop increment</string>
	<string-array name="setff">
		<item>24x36</item>
		<item>4.5x6</item>
		<item>6x6</item>
		<item>6x7</item>
		<item>6x9</item>
	</string-array>
	<string-array name="setemp">
		<item>ISO 25/15°</item>
		<item>ISO 40/17°</item>
		<item>ISO 50/18°</item>
		<item>ISO 64/19°</item>
		<item>ISO 100/21°</item>
		<item>ISO 125/22°</item>
		<item>ISO 160/23°</item>
		<item>ISO 200/24°</item>
		<item>ISO 320/26°</item>
		<item>ISO 400/27°</item>
		<item>ISO 640/29°</item>
		<item>ISO 800/30°</item>
		<item>ISO 1000/31°</item>
		<item>ISO 1600/33°</item>
		<item>ISO 3200/36°</item>
	</string-array>
	<string-array name="settyp">
		<item>Colour negative (I: CN)</item>
		<item>Colour reversal (I: CR)</item>
		<item>Black and white negative (I: SW)</item>
		<item>Black and white reversal (I: SWR)</item>
		<item>Colour reversal/Tungsten (I: CT)</item>
	</string-array>
	<string-array name="setnm">
		<item>None</item>
		<item>Diopter +1</item>
		<item>Diopter +2</item>
		<item>Diopter +3</item>
		<item>Diopter +4</item>
		<item>Diopter +5</item>
		<item>Ext. tube 10</item>
		<item>Ext. tube 20</item>
		<item>Ext. tube 30</item>
		<item>Bellows</item>
	</string-array>
	<string-array name="setfil">
		<item>None</item>
		<item>Yellow</item>
		<item>Orange</item>
		<item>Red</item>
		<item>Yellowish green</item>
		<item>Green</item>
		<item>Blue</item>
		<item>Warm tone</item>
		<item>Cool tone</item>
		<item>UV</item>
		<item>Polarizer</item>
		<item>ND x2</item>
		<item>ND x4</item>
		<item>ND x6</item>
		<item>Soft</item>
	</string-array>
	<string-array name="setbli">
		<item>No flashlight</item>
		<item>TTL</item>
		<item>Auto</item>
		<item>Multi flash / 2</item>
		<item>Multi flash / 3</item>
		<item>Manual 1/1</item>
		<item>Manual 1/2</item>
		<item>Manual 1/4</item>
		<item>Manual 1/8</item>
		<item>Manual 1/16</item>
	</string-array>
	<string-array name="setson">
		<item>Normal</item>
		<item>Push 1</item>
		<item>Push 2</item>
		<item>Push 3</item>
		<item>Pull 1</item>
		<item>Pull 2</item>
		<item>Cross</item>
		<item>Lowcolor</item>
	</string-array>
	<string-array name="setfok">
		<item>Auto</item>
		<item>Infinity</item>
		<item>20 m</item>
		<item>10 m</item>
		<item>8 m</item>
		<item>5 m</item>
		<item>4 m</item>
		<item>3 m</item>
		<item>2 m</item>
		<item>1.5 m</item>
		<item>1 m</item>
		<item>0.8 m</item>
		<item>0.7 m</item>
		<item>0.5 m</item>
		<item>0.3 m</item>
	</string-array>
		<string name="export_film">Export film</string>
</resources>