<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/maini" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:orientation="vertical"
	android:padding="5dp">

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TableLayout
                android:id="@+id/TableLayout02"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="4dp"
                android:scrollbars="vertical" >

                <TableLayout
                    android:id="@+id/TableLayout03"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:padding="8dp"
                    android:paddingBottom="0dp"
                    android:paddingLeft="0dp"
                    android:paddingRight="0dp"
                    android:paddingTop="0dp" >

                    <TableLayout
                        android:id="@+id/TableLayout04"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/TextView05"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="12dp"
                            android:text="@string/lens" />

                        <LinearLayout
                            android:id="@+id/LinearLayout03"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:layout_weight=".44"
                            android:gravity="left" >

                            <TextView
                                android:id="@+id/TextView11"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight=".34"
                                android:visibility="invisible" />

                            <Spinner
                                android:id="@+id/spinner_brennweite"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight=".1" />
                        </LinearLayout>

                        <TextView
                            android:id="@+id/TextView02"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="12dp"
                            android:text="@string/aperture" />

                        <LinearLayout
                            android:id="@+id/mainiof"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:layout_weight=".44"
                            android:gravity="left" >

                            <TextView
                                android:id="@+id/TextView08"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight=".34"
                                android:visibility="invisible" />

                            <Spinner
                                android:id="@+id/spinner_blende"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight=".1" />
                        </LinearLayout>

                        <TextView
                            android:id="@+id/TextView04"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="12dp"
                            android:text="@string/exposure" />

                        <LinearLayout
                            android:id="@+id/LinearLayout02"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:layout_weight=".44"
                            android:gravity="left" >

                            <TextView
                                android:id="@+id/TextView10"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight=".34"
                                android:visibility="invisible" />

                            <Spinner
                                android:id="@+id/spinner_zeit"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight=".1" />
                        </LinearLayout>

                        <TextView
                            android:id="@+id/TextView06"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="12dp"
                            android:text="@string/focus" />

                        <LinearLayout
                            android:id="@+id/LinearLayout01"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:layout_weight=".44"
                            android:gravity="left" >

                            <TextView
                                android:id="@+id/TextView09"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight=".34"
                                android:visibility="invisible" />

                            <Spinner
                                android:id="@+id/spinner_fokus"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight=".1" />
                        </LinearLayout>

                        <TextView
                            android:id="@+id/TextView03"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="12dp"
                            android:text="@string/filter" />

                        <LinearLayout
                            android:id="@+id/LinearLayout04"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:layout_weight=".44"
                            android:gravity="left" >

                            <TextView
                                android:id="@+id/TextView12"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight=".34"
                                android:visibility="invisible" />

                            <Spinner
                                android:id="@+id/spinner_filter"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight=".1" />
                        </LinearLayout>

                        <TextView
                            android:id="@+id/TextView05"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="12dp"
                            android:text="@string/macro" />

                        <LinearLayout
                            android:id="@+id/LinearLayout03"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:layout_weight=".44"
                            android:gravity="left" >

                            <TextView
                                android:id="@+id/TextView11"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight=".34"
                                android:visibility="invisible" />

                            <Spinner
                                android:id="@+id/spinner_makro"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight=".1" />
                        </LinearLayout>
                    </TableLayout>
                </TableLayout>
            </TableLayout>

        </LinearLayout>
    </ScrollView>


	android:id="@+id/linearLayout1"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:padding="10dp">



</LinearLayout>

